--- a/AppTiendaComida/AppTiendaComida.csproj
+++ b/AppTiendaComida/AppTiendaComida.csproj
@@ -100,6 +100,9 @@
 	  <MauiXaml Update="Views\UsuarioAgregarPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\UsuarioDetallePage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\UsuarioPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
