--- a/AppTiendaComida/AppTiendaComida.csproj
+++ b/AppTiendaComida/AppTiendaComida.csproj
@@ -103,6 +103,9 @@
 	  <MauiXaml Update="Views\UsuarioDetallePage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\UsuarioModificarPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\UsuarioPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
